--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -596,6 +596,9 @@ input[type="checkbox"].x-box:checked:after {
 .dot.fail {
   background-color: red;
 }
+.dot.warning {
+  background-color: blue;
+}
 
 
 
