--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks/tasks-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks/tasks-panel.component.html
@@ -7,7 +7,7 @@
         </a>
       </h4>
       <span class="heading-status-label pull-right">Current status: <span
-          [ngClass]="{'success':(taskGroupType.status === 'Complete' || taskGroupType.status  === 'Warning'), 'pending':taskGroupType.status === 'Queued' || taskGroupType.status === 'Running' || taskGroupType.status === 'Processing' || taskGroupType.status === 'Pending','fail':taskGroupType.status === 'Failed'}">{{taskGroupType.status}}</span></span>
+          [ngClass]="{'success':taskGroupType.status === 'Complete', 'warning':taskGroupType.status  === 'Warning', 'pending':taskGroupType.status === 'Queued' || taskGroupType.status === 'Running' || taskGroupType.status === 'Processing' || taskGroupType.status === 'Pending','fail':taskGroupType.status === 'Failed'}">{{taskGroupType.status}}</span></span>
     </div>
     <div id="task-group-panel-{{groupTypeId}}" class="panel-body" [isAnimated]="false" [collapse]="!showProcess">
 
