--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -93,7 +93,7 @@
                     </a>
                   </h4>
                   
-                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','warning':taskGroup.status === 'Warning', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','warning':taskGroup.status === 'Warning', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued','fail':(taskGroup.status === 'Failed' || taskGroup.status === 'Error')}" ></span>
 
                   <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
 
@@ -150,7 +150,7 @@
                     </a>
                   </h4>
                   
-                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','warning':taskGroup.status === 'Warning', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued', 'fail':taskGroup.status === 'Failed'}" ></span>
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','warning':taskGroup.status === 'Warning', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued', 'fail':(taskGroup.status === 'Failed' || taskGroup.status === 'Error')}" ></span>
 
                   <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
 
@@ -205,7 +205,7 @@
                     </a>
                   </h4>
                   
-                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','warning':taskGroup.status === 'Warning', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued', 'fail':taskGroup.status === 'Failed'}" ></span>
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','warning':taskGroup.status === 'Warning', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued', 'fail':(taskGroup.status === 'Failed' || taskGroup.status === 'Error')}" ></span>
 
                   <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
 
