--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks/tasks-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks/tasks-panel.component.html
@@ -7,27 +7,35 @@
         </a>
       </h4>
       <span class="heading-status-label pull-right">Current status: <span
-          [ngClass]="{'success':taskGroupType.status === 'Complete', 'warning':taskGroupType.status  === 'Warning', 'pending':taskGroupType.status === 'Queued' || taskGroupType.status === 'Running' || taskGroupType.status === 'Processing' || taskGroupType.status === 'Pending','fail':taskGroupType.status === 'Failed'}">{{taskGroupType.status}}</span></span>
+          [ngClass]="{'success':taskGroupType.status === 'Complete', 'warning':taskGroupType.status  === 'Warning', 'pending':taskGroupType.status === 'Queued' || taskGroupType.status === 'Running' || taskGroupType.status === 'Processing' || taskGroupType.status === 'Pending','fail':(taskGroupType.status === 'Failed' || taskGroupType.status === 'Error')}">{{taskGroupType.status}}</span></span>
     </div>
     <div id="task-group-panel-{{groupTypeId}}" class="panel-body" [isAnimated]="false" [collapse]="!showProcess">
 
       <div class="task-container" *ngFor="let task of taskGroupType.tasks; let idx=index">
-        <div *ngIf="task.status !== 'Complete' && task.status !== 'Failed'">
+        <div *ngIf="task.status !== 'Complete' && task.status !== 'Failed' && task.status !== 'Error'" >
           <ul class="list-unstyled" style="margin: 0;">
             <li>Status: <b
-                [ngClass]="{'success':task.status === 'Complete', 'pending':task.status === 'Queued' || task.status === 'Running' || task.status === 'Processing' || task.status === 'Pending','fail':task.status === 'Failed'}">{{task.status}}</b>
+                [ngClass]="{'success':task.status === 'Complete', 'pending':task.status === 'Queued' || task.status === 'Running' || task.status === 'Processing' || task.status === 'Pending','fail':(task.status === 'Failed' && task.status === 'Error')}">{{task.status}}</b>
             </li>
             <li>Created on: <b>{{task.createDate}}</b></li>
             <li>Last update: <b>{{task.lastUpdatedDate}}</b></li>
             <li style="word-break: break-all;">Message: <b>{{task.message}}</b></li>
           </ul>
-          <button class="btn btn-danger" (click)="removeTask(task)">Delete Task</button>
+          
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="button-holder" style="margin-top: 30px;">
+                <button class="btn btn-default caution" (click)="removeTask(task)">Delete Task</button>
+                <button class="btn btn-default" *ngIf="task.actions.length > 0" (click)="task.showError = !task.showError">Show Warnings</button>
+              </div>
+            </div>
+          </div>          
         </div>
 
-        <div *ngIf="task.status === 'Complete' || task.status === 'Failed'">
+        <div *ngIf="task.status === 'Complete' || task.status === 'Failed' || task.status === 'Error'">
           <ul class="list-unstyled" style="margin: 0;">
             <li>Status: 
-              <b [ngClass]="{'success':task.status === 'Complete','pending':task.status === 'Queued' || task.status === 'Running' || task.status === 'Processing' || task.status === 'Pending', 'fail':task.status === 'Failed'}">
+              <b [ngClass]="{'success':task.status === 'Complete','pending':task.status === 'Queued' || task.status === 'Running' || task.status === 'Processing' || task.status === 'Pending', 'fail':(task.status === 'Failed' && task.status === 'Error')}">
                 {{task.status === 'Complete' && task.actions.length > 0 ? 'Complete With Warnings' : task.status }}
               </b>
             </li>
@@ -52,32 +60,32 @@
               <textarea style="color:grey;width:500px;height:200px;" [innerHTML]="task.odmOutput"></textarea>
             </div>
           </div>
-
-          <div *ngIf="task.showError" class="row">
-            <div class="col-sm-12">
-              <h4>Warnings:</h4>
-              <h4 *ngIf="task.actions.length === 0" style="color:grey;">There are no actions for this task.</h4>
-              <table *ngIf="task.actions.length > 0" class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>Description</th>
-                    <th>Creation Date</th>
-                    <th>Last Updated</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let action of task.actions; let i=index">
-                    <th scope="row">{{i + 1}}</th>
-                    <td>{{action.description}}</td>
-                    <td>{{action.createDate}}</td>
-                    <td>{{action.lastUpdatedDate}}</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
         </div>
+        
+        <div *ngIf="task.showError" class="row">
+          <div class="col-sm-12">
+            <h4>Warnings:</h4>
+            <h4 *ngIf="task.actions.length === 0" style="color:grey;">There are no actions for this task.</h4>
+            <table *ngIf="task.actions.length > 0" class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Description</th>
+                  <th>Creation Date</th>
+                  <th>Last Updated</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let action of task.actions; let i=index">
+                  <th scope="row">{{i + 1}}</th>
+                  <td>{{action.description}}</td>
+                  <td>{{action.createDate}}</td>
+                  <td>{{action.lastUpdatedDate}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>        
       </div>
     </div>
   </div>
