--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -196,10 +196,10 @@
                     <alert *ngIf="task.status === 'Complete' && task.actions.length !== 0" type="warning" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
                       <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}. Task completed with warnings.  See the <a routerLink="/site/tasks">task page</a> for more details.
                     </alert>
-                    <alert *ngIf="task.status === 'Error'" type="danger" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
+                    <alert *ngIf="task.status === 'Failed'" type="danger" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
                       <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}. Task completed with errors.  See the <a routerLink="/site/tasks">task page</a> for more details.
                     </alert>
-                    <alert *ngIf="task.status !== 'Error' && task.status !== 'Complete'" type="info" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
+                    <alert *ngIf="task.status !== 'Failed' && task.status !== 'Complete'" type="info" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
                       <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}.
                     </alert>
                   </div>                  
