--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks/tasks-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks/tasks-panel.component.html
@@ -7,7 +7,7 @@
         </a>
       </h4>
       <span class="heading-status-label pull-right">Current status: <span
-          [ngClass]="{'success':taskGroupType.status === 'Complete', 'warning':taskGroupType.status  === 'Warning', 'pending':taskGroupType.status === 'Queued' || taskGroupType.status === 'Running' || taskGroupType.status === 'Processing' || taskGroupType.status === 'Pending','fail':(taskGroupType.status === 'Failed' || taskGroupType.status === 'Error')}">{{taskGroupType.status}}</span></span>
+          [ngClass]="{'success':taskGroupType.status === 'Complete', 'warning':taskGroupType.status  === 'Warning', 'pending':taskGroupType.status === 'Queued' || taskGroupType.status === 'Processing','fail':taskGroupType.status === 'Failed'}">{{taskGroupType.status}}</span></span>
     </div>
     <div id="task-group-panel-{{groupTypeId}}" class="panel-body" [isAnimated]="false" [collapse]="!showProcess">
 
@@ -15,7 +15,7 @@
         <div *ngIf="task.status !== 'Complete' && task.status !== 'Failed' && task.status !== 'Error'" >
           <ul class="list-unstyled" style="margin: 0;">
             <li>Status: <b
-                [ngClass]="{'success':task.status === 'Complete', 'pending':task.status === 'Queued' || task.status === 'Running' || task.status === 'Processing' || task.status === 'Pending','fail':(task.status === 'Failed' && task.status === 'Error')}">{{task.status}}</b>
+                [ngClass]="{'success':task.status === 'Complete', 'pending':(task.status === 'Queued' || task.status === 'Processing'),'fail':task.status === 'Failed'}">{{task.status}}</b>
             </li>
             <li>Created on: <b>{{task.createDate}}</b></li>
             <li>Last update: <b>{{task.lastUpdatedDate}}</b></li>
@@ -35,7 +35,7 @@
         <div *ngIf="task.status === 'Complete' || task.status === 'Failed' || task.status === 'Error'">
           <ul class="list-unstyled" style="margin: 0;">
             <li>Status: 
-              <b [ngClass]="{'success':task.status === 'Complete','pending':task.status === 'Queued' || task.status === 'Running' || task.status === 'Processing' || task.status === 'Pending', 'fail':(task.status === 'Failed' && task.status === 'Error')}">
+              <b [ngClass]="{'success':task.status === 'Complete','pending':(task.status === 'Queued' || task.status === 'Processing'), 'fail':task.status === 'Failed'}">
                 {{task.status === 'Complete' && task.actions.length > 0 ? 'Complete With Warnings' : task.status }}
               </b>
             </li>
