--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -578,7 +578,7 @@ input[type="checkbox"].x-box:checked:after {
   background-color: #6CB46F;
 }
 .dot.pending {    
-  background-color: #BF1E1E;
+  background-color: #FF8C42;
 }
 .dot.warning {
   background-color: #2C88CB;
