Fixed issue with account invite not working.

--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/account-invite-complete.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/account-invite-complete.component.html
@@ -1,5 +1,4 @@
-<div>
-  <uasdm-header></uasdm-header>
+<div id="app-container" class="container">
 
   <div *ngIf="user != null" class="row">
     <div class="col-lg-2"></div>
