Allow user to close the leaf modal even when reprocessing starts

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -137,8 +137,7 @@
                 </button>
               </div>
               <div class="col-md-10" style="text-align: right;">
-                <button type="button" class="btn btn-default" [disabled]="processRunning"
-                  (click)="bsModalRef.hide()">Close</button>
+                <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
                 <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning"
                   (click)="handleDownload()" style="margin-left: 5px;">
                   Download all
