--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -184,7 +184,7 @@ button.create-site-btn {
 
 .image-list-container {
     overflow-y: auto;
-    height: 300px;
+    height: 50vh;
     border-top: solid 1px lightgrey;
 }
 .image-list-container > .list-group {
