Updated geoprism version and various tickets
Site selection from Map
Updated metadata modal to include units for sensor width and height

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -56,7 +56,7 @@
                         [ngClass]="{'card-disabled' : item.excludeFromProcess, 'non-clickable' : !enableSelectableImages}">
                         <input type="checkbox" class="x-box" *ngIf="enableSelectableImages"
                           [checked]="item.excludeFromProcess" (change)="toggleExcludeImage($event, item)" />
-                        <img (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
+                        <img style="max-height: 150px" (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
                           [ngClass]="{'img-disabled' : item.excludeFromProcess}"
                           [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : (context + '/net/geoprism/images/thumbnail-default.png')"
                           alt="Image">
