--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
@@ -127,9 +127,8 @@
                         </div>
                         <div class="form-group">
                             <label for="sensor.sensorWidth">Sensor Width Units</label>
-                            <select [(ngModel)]="metaObject.sensor.sensorWidthUnits" name="sensor.sensorWidthUnits" type="input" required>                               
-                                <option></option>
-                                <option value="mm">Millimeters</option>
+                            <select [(ngModel)]="metaObject.sensor.sensorWidthUnits" name="sensor.sensorWidthUnits" type="input" required disabled>
+                                <option value="mm" selected>Millimeters</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -139,10 +138,8 @@
                         </div>
                         <div class="form-group">
                             <label for="sensor.sensorWidth">Sensor Height Units</label>
-                            <select [(ngModel)]="metaObject.sensor.sensorHeightUnits" name="sensor.sensorHeightUnits" type="input" required>                               
-                                <option></option>
-                                <option value="ft">Feet</option>
-                                <option value="m">Meters</option>
+                            <select [(ngModel)]="metaObject.sensor.sensorHeightUnits" name="sensor.sensorHeightUnits" type="input" required disabled>
+                                <option value="mm" selected>Millimeters</option>
                             </select>                            
                         </div>
                         <div class="form-group">
