--- a/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
@@ -51,6 +51,24 @@
 
                         </div>
                     </div>
+                    
+                    <div class="row">
+                      <div class="col-md-12 text-center">
+                        <h4 class="keycloak-or-line-block">
+                          <span class="keycloak-or-text">&nbsp;Or&nbsp;</span>
+                        </h4>
+                    
+                        <button (click)="onClickKeycloak()" class="keycloak-login-button">
+                          <span class="keycloak-login-button-text">
+                            Log in with 
+                          </span>
+                          <span>
+									            <img alt="Logo" src="https://www.geoplatform.gov/wp-content/themes/geoplatform-portal-four/img/logo.svg" style="width:2em">
+									            <span class="keycloak-login-button-text">GeoPlatform.gov</span>
+                          </span>
+                        </button>
+                      </div>
+                    </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-2"></div>
             </div>
