Keycloak: Ability to disable / enable keycloak integration

--- a/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     
-                    <div class="row">
+                    <div *ngIf="keycloakEnabled" class="row">
                       <div class="col-md-12 text-center">
                         <h4 class="keycloak-or-line-block">
                           <span class="keycloak-or-text">&nbsp;Or&nbsp;</span>
